# study_MAI

./: README.md
AI/ML/: kinopoisk_parser.ipynb
CG/cp/: Form1.cs  NURBS.cs  Program.cs  test1.txt  test2.txt
CG/lab4_5/: test.txt
CG/lab6/: lab_6.py
CG/lab7/: Form1.Designer.cs  Interpolator2.cs  Program.cs
CR/lab1/: quadratic_sieve.py  test.txt  test1  test2
CR/lab3/: Lab3.py  Lab3_CR_Likh.ipynb  md5_old.py
CR/lab4/: lab4.py
CR/lab5/: lab5.py  russian_words.txt
DA/: README.md
DA/cp/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  8.txt  Makefile  TFile.cpp  TFile.h  TLCS_finder.cpp  TLCS_finder.h  gen_tests_diff.py  main.cpp  my_res.txt  res.txt  test.sh
DA/lab1/: Makefile  benchmark.c  gen_data.py  gen_data2.py  input10  input10_d  input10_r  input10_s  input10k  input10k_r  input10k_s  main.c  test  test.txt  tt.txt  vector.c  vector.h
DA/lab2/: Makefile  da2.cpp  gen.py  gen_test.py  input2  main.h  mystring.cpp  mystring.h  rbtree.cpp  rbtree.h  test1  test100  test1000  test2
DA/lab3/: profile
DA/lab4/: Makefile  main.cpp  test.txt  ttrie.cpp  ttrie.h
IR/expat_test/: CMakeLists.txt  Makefile  TStack.h  exprtree.cpp  exprtree.hpp  hashtable.hpp  index.cpp  index.h  infixtotree.cpp  main.cpp  shunting-yard.h  test.cpp  tstring.cpp  tstring.h  vector.hpp
IT_MGMT/: Реестр_рисков.docx
OS/: README.md
PR/: conditions_lab5.txt  lab1.ipynb  lab2.ipynb  lab3.ipynb  lab4.ipynb  lab5.ipynb  Демонстрация_NET_Лабораторная_работа_5.ipynb
SE/: .gitignore  Makefile  docker-compose.yml  gun_app.py  run_app.sh
UMF/: Likh_Dirihle.py
year_2/: README.md
(+894 files in other folders)
